tests/paczka1/small_fuzzy/91299515.err
Error in line 2: 4OKpodOrJM A223 77,0
Error in line 12: A22b A22b 72,2
